--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "kartik narang",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^1.7.5",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.4",
-    "path": "^0.12.7"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "kartik narang",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "axios": "^1.7.5",
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.5.4",
+        "nodemailer": "^6.9.14",
+        "nodemon": "^3.1.4",
+        "path": "^0.12.7"
+    }
 }
